trunk/ExpertSystem/src/br/ufal/tci/JJTREE/Parser_1.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser_1.java */
package br.ufal.tci.JJTREE;

import br.ufal.tci.logger.LoggerGenerator;

public class Parser_1/* @bgen(jjtree) */implements Parser_1TreeConstants,
		Parser_1Constants {/* @bgen(jjtree) */
	protected static JJTParser_1State jjtree = new JJTParser_1State();

	static final public SimpleNode Root() throws ParseException {
		trace_call("Root");
		try {
			/* @bgen(jjtree) Root */
			ASTRoot jjtn000 = new ASTRoot(JJTROOT);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			try {
				Program();
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false;
				{
					if (true)
						return jjtn000;
				}
			} catch (Throwable jjte000) {
				if (jjtc000) {
					jjtree.clearNodeScope(jjtn000);
					jjtc000 = false;
				} else {
					jjtree.popNode();
				}
				if (jjte000 instanceof RuntimeException) {
					{
						if (true)
							throw (RuntimeException) jjte000;
					}
				}
				if (jjte000 instanceof ParseException) {
					{
						if (true)
							throw (ParseException) jjte000;
					}
				}
				{
					if (true)
						throw (Error) jjte000;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("Root");
		}
	}

	final public ASTStart Start() throws ParseException {
		trace_call("Start");
		try {
			/* @bgen(jjtree) Start */
			ASTStart jjtn000 = new ASTStart(JJTSTART);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			try {
				Program();
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false;
				{
					if (true)
						return jjtn000;
				}
			} catch (Throwable jjte000) {
				if (jjtc000) {
					jjtree.clearNodeScope(jjtn000);
					jjtc000 = false;
				} else {
					jjtree.popNode();
				}
				if (jjte000 instanceof RuntimeException) {
					{
						if (true)
							throw (RuntimeException) jjte000;
					}
				}
				if (jjte000 instanceof ParseException) {
					{
						if (true)
							throw (ParseException) jjte000;
					}
				}
				{
					if (true)
						throw (Error) jjte000;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("Start");
		}
	}

	static final public void ObjectInstanciation() throws ParseException {
		trace_call("ObjectInstanciation");
		try {
			/* @bgen(jjtree) ObjectInstanciation */
			ASTObjectInstanciation jjtn000 = new ASTObjectInstanciation(
					JJTOBJECTINSTANCIATION);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			try {
				Identifier();
				jj_consume_token(33);
				jj_consume_token(NEW);
				Identifier();
				label_1: while (true) {
					switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case 34:
						;
						break;
					default:
						jj_la1[0] = jj_gen;
						break label_1;
					}
					jj_consume_token(34);
					Identifier();
				}
				jj_consume_token(35);
				ArgumentList();
				jj_consume_token(36);
			} catch (Throwable jjte000) {
				if (jjtc000) {
					jjtree.clearNodeScope(jjtn000);
					jjtc000 = false;
				} else {
					jjtree.popNode();
				}
				if (jjte000 instanceof RuntimeException) {
					{
						if (true)
							throw (RuntimeException) jjte000;
					}
				}
				if (jjte000 instanceof ParseException) {
					{
						if (true)
							throw (ParseException) jjte000;
					}
				}
				{
					if (true)
						throw (Error) jjte000;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
		} finally {
			trace_return("ObjectInstanciation");
		}
	}

	static final public Token Identifier() throws ParseException {
		trace_call("Identifier");
		try {
			/* @bgen(jjtree) ID */
			ASTID jjtn000 = new ASTID(JJTID);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			Token t;
			try {
				t = jj_consume_token(IDENTIFIER);
				jjtn000.setName(t.image);
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false;
				{
					if (true)
						return t;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("Identifier");
		}
	}

	static final public void Interval() throws ParseException {
		trace_call("Interval");
		try {
			/* @bgen(jjtree) Interval */
			ASTInterval jjtn000 = new ASTInterval(JJTINTERVAL);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			try {
				Identifier();
				jj_consume_token(33);
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 37:
				case 38:
				case 39:
				case 40:
				case 41:
					switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case 37:
						jj_consume_token(37);
						break;
					case 38:
						jj_consume_token(38);
						break;
					case 39:
						jj_consume_token(39);
						break;
					case 40:
						jj_consume_token(40);
						break;
					case 41:
						jj_consume_token(41);
						break;
					default:
						jj_la1[1] = jj_gen;
						jj_consume_token(-1);
						throw new ParseException();
					}
					ThenExpression();
					break;
				case 42:
				case 43:
					switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case 42:
						jj_consume_token(42);
						break;
					case 43:
						jj_consume_token(43);
						break;
					default:
						jj_la1[2] = jj_gen;
						jj_consume_token(-1);
						throw new ParseException();
					}
					ListOfNumbers();
					switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case 42:
						jj_consume_token(42);
						break;
					case 43:
						jj_consume_token(43);
						break;
					default:
						jj_la1[3] = jj_gen;
						jj_consume_token(-1);
						throw new ParseException();
					}
					break;
				default:
					jj_la1[4] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
			} catch (Throwable jjte000) {
				if (jjtc000) {
					jjtree.clearNodeScope(jjtn000);
					jjtc000 = false;
				} else {
					jjtree.popNode();
				}
				if (jjte000 instanceof RuntimeException) {
					{
						if (true)
							throw (RuntimeException) jjte000;
					}
				}
				if (jjte000 instanceof ParseException) {
					{
						if (true)
							throw (ParseException) jjte000;
					}
				}
				{
					if (true)
						throw (Error) jjte000;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
		} finally {
			trace_return("Interval");
		}
	}

	static final public void ListOfNumbers() throws ParseException {
		trace_call("ListOfNumbers");
		try {
			/* @bgen(jjtree) ListOfNumbers */
			ASTListOfNumbers jjtn000 = new ASTListOfNumbers(JJTLISTOFNUMBERS);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			try {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case INTEGER_LITERAL:
					jj_consume_token(INTEGER_LITERAL);
					break;
				case FLOATING_POINT_LITERAL:
					jj_consume_token(FLOATING_POINT_LITERAL);
					break;
				default:
					jj_la1[5] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				jj_consume_token(44);
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case INTEGER_LITERAL:
					jj_consume_token(INTEGER_LITERAL);
					break;
				case FLOATING_POINT_LITERAL:
					jj_consume_token(FLOATING_POINT_LITERAL);
					break;
				default:
					jj_la1[6] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
		} finally {
			trace_return("ListOfNumbers");
		}
	}

	static final public void ArgumentList() throws ParseException {
		trace_call("ArgumentList");
		try {
			/* @bgen(jjtree) ArgumentList */
			ASTArgumentList jjtn000 = new ASTArgumentList(JJTARGUMENTLIST);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			try {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case INTEGER_LITERAL:
				case FLOATING_POINT_LITERAL:
				case CHARACTER_LITERAL:
				case STRING_LITERAL:
				case IDENTIFIER:
					Argument();
					label_2: while (true) {
						switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
						case 45:
							;
							break;
						default:
							jj_la1[7] = jj_gen;
							break label_2;
						}
						jj_consume_token(45);
						Argument();
					}
					break;
				default:
					jj_la1[8] = jj_gen;
					;
				}
			} catch (Throwable jjte000) {
				if (jjtc000) {
					jjtree.clearNodeScope(jjtn000);
					jjtc000 = false;
				} else {
					jjtree.popNode();
				}
				if (jjte000 instanceof RuntimeException) {
					{
						if (true)
							throw (RuntimeException) jjte000;
					}
				}
				if (jjte000 instanceof ParseException) {
					{
						if (true)
							throw (ParseException) jjte000;
					}
				}
				{
					if (true)
						throw (Error) jjte000;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
		} finally {
			trace_return("ArgumentList");
		}
	}

	static final public Token Integer() throws ParseException {
		trace_call("Integer");
		try {
			/* @bgen(jjtree) Integer */
			ASTInteger jjtn000 = new ASTInteger(JJTINTEGER);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			Token t;
			try {
				t = jj_consume_token(INTEGER_LITERAL);
				jjtn000.setToken(t);
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false;
				{
					if (true)
						return t;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("Integer");
		}
	}

	static final public Token FloatPoint() throws ParseException {
		trace_call("FloatPoint");
		try {
			/* @bgen(jjtree) FloatPoint */
			ASTFloatPoint jjtn000 = new ASTFloatPoint(JJTFLOATPOINT);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			Token t;
			try {
				t = jj_consume_token(FLOATING_POINT_LITERAL);
				jjtn000.setToken(t);
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false;
				{
					if (true)
						return t;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("FloatPoint");
		}
	}

	static final public Token CharacterLiteral() throws ParseException {
		trace_call("CharacterLiteral");
		try {
			/* @bgen(jjtree) CharacterLiteral */
			ASTCharacterLiteral jjtn000 = new ASTCharacterLiteral(
					JJTCHARACTERLITERAL);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			Token t;
			try {
				t = jj_consume_token(CHARACTER_LITERAL);
				jjtn000.setToken(t);
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false;
				{
					if (true)
						return t;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("CharacterLiteral");
		}
	}

	static final public Token StringLiteral() throws ParseException {
		trace_call("StringLiteral");
		try {
			/* @bgen(jjtree) StringLiteral */
			ASTStringLiteral jjtn000 = new ASTStringLiteral(JJTSTRINGLITERAL);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			Token t;
			try {
				t = jj_consume_token(STRING_LITERAL);
				jjtn000.setToken(t);
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false;
				{
					if (true)
						return t;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("StringLiteral");
		}
	}

	static final public void Argument() throws ParseException {
		trace_call("Argument");
		try {
			/* @bgen(jjtree) Argument */
			ASTArgument jjtn000 = new ASTArgument(JJTARGUMENT);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			Token t = null;
			try {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case INTEGER_LITERAL:
					t = Integer();
					break;
				case FLOATING_POINT_LITERAL:
					t = FloatPoint();
					break;
				case CHARACTER_LITERAL:
					t = CharacterLiteral();
					break;
				case STRING_LITERAL:
					t = StringLiteral();
					break;
				case IDENTIFIER:
					Identifier();
					switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case 34:
						jj_consume_token(34);
						Identifier();
						switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
						case 35:
							jj_consume_token(35);
							ArgumentList();
							jj_consume_token(36);
							break;
						default:
							jj_la1[9] = jj_gen;
							;
						}
						break;
					default:
						jj_la1[10] = jj_gen;
						;
					}
					jjtree.closeNodeScope(jjtn000, true);
					jjtc000 = false;
					jjtn000.setToken(t);
					break;
				default:
					jj_la1[11] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
			} catch (Throwable jjte000) {
				if (jjtc000) {
					jjtree.clearNodeScope(jjtn000);
					jjtc000 = false;
				} else {
					jjtree.popNode();
				}
				if (jjte000 instanceof RuntimeException) {
					{
						if (true)
							throw (RuntimeException) jjte000;
					}
				}
				if (jjte000 instanceof ParseException) {
					{
						if (true)
							throw (ParseException) jjte000;
					}
				}
				{
					if (true)
						throw (Error) jjte000;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
		} finally {
			trace_return("Argument");
		}
	}

	static final public void VariableDeclaration() throws ParseException {
		trace_call("VariableDeclaration");
		try {
			/* @bgen(jjtree) VariableDeclaration */
			ASTVariableDeclaration jjtn000 = new ASTVariableDeclaration(
					JJTVARIABLEDECLARATION);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			try {
				jj_consume_token(VARIABLE);
				jj_consume_token(46);
				VariableList();
				label_3: while (true) {
					switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
					case STRING:
					case REAL:
					case INT:
					case BOOLEAN:
					case OBJECT:
						;
						break;
					default:
						jj_la1[12] = jj_gen;
						break label_3;
					}
					VariableList();
				}
			} catch (Throwable jjte000) {
				if (jjtc000) {
					jjtree.clearNodeScope(jjtn000);
					jjtc000 = false;
				} else {
					jjtree.popNode();
				}
				if (jjte000 instanceof RuntimeException) {
					{
						if (true)
							throw (RuntimeException) jjte000;
					}
				}
				if (jjte000 instanceof ParseException) {
					{
						if (true)
							throw (ParseException) jjte000;
					}
				}
				{
					if (true)
						throw (Error) jjte000;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
		} finally {
			trace_return("VariableDeclaration");
		}
	}

	static final public void VariableList() throws ParseException {
		trace_call("VariableList");
		try {
			/* @bgen(jjtree) VariableList */
			ASTVariableList jjtn000 = new ASTVariableList(JJTVARIABLELIST);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			try {
				Type();
				jj_consume_token(46);
				Identifier();
				label_4: while (true) {
					if (jj_2_1(2)) {
						;
					} else {
						break label_4;
					}
					jj_consume_token(45);
					Identifier();
				}
			} catch (Throwable jjte000) {
				if (jjtc000) {
					jjtree.clearNodeScope(jjtn000);
					jjtc000 = false;
				} else {
					jjtree.popNode();
				}
				if (jjte000 instanceof RuntimeException) {
					{
						if (true)
							throw (RuntimeException) jjte000;
					}
				}
				if (jjte000 instanceof ParseException) {
					{
						if (true)
							throw (ParseException) jjte000;
					}
				}
				{
					if (true)
						throw (Error) jjte000;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
		} finally {
			trace_return("VariableList");
		}
	}

	static final public void Type() throws ParseException {
		trace_call("Type");
		try {
			/* @bgen(jjtree) Type */
			ASTType jjtn000 = new ASTType(JJTTYPE);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			Token t;
			try {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case STRING:
					t = jj_consume_token(STRING);
					break;
				case REAL:
					t = jj_consume_token(REAL);
					break;
				case INT:
					t = jj_consume_token(INT);
					break;
				case BOOLEAN:
					t = jj_consume_token(BOOLEAN);
					break;
				case OBJECT:
					t = jj_consume_token(OBJECT);
					break;
				default:
					jj_la1[13] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false;
				jjtn000.setName(t.image);
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
		} finally {
			trace_return("Type");
		}
	}

	static final public void Constant() throws ParseException {
		trace_call("Constant");
		try {
			/* @bgen(jjtree) Constant */
			ASTConstant jjtn000 = new ASTConstant(JJTCONSTANT);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			Token t;
			try {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case INTEGER_LITERAL:
					t = jj_consume_token(INTEGER_LITERAL);
					break;
				case FLOATING_POINT_LITERAL:
					t = jj_consume_token(FLOATING_POINT_LITERAL);
					break;
				case STRING_LITERAL:
					t = jj_consume_token(STRING_LITERAL);
					break;
				case TRUE:
					t = jj_consume_token(TRUE);
					break;
				case FALSE:
					t = jj_consume_token(FALSE);
					break;
				default:
					jj_la1[14] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false;
				jjtn000.setName(t.image);
				jjtn000.setToken(t);
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
		} finally {
			trace_return("Constant");
		}
	}

	static final public void Variable() throws ParseException {
		trace_call("Variable");
		try {
			/* @bgen(jjtree) Variable */
			ASTVariable jjtn000 = new ASTVariable(JJTVARIABLE);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			Token t;
			try {
				t = Identifier();
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false;
				jjtn000.setName(t.image);
				jjtn000.setToken(t);
			} catch (Throwable jjte000) {
				if (jjtc000) {
					jjtree.clearNodeScope(jjtn000);
					jjtc000 = false;
				} else {
					jjtree.popNode();
				}
				if (jjte000 instanceof RuntimeException) {
					{
						if (true)
							throw (RuntimeException) jjte000;
					}
				}
				if (jjte000 instanceof ParseException) {
					{
						if (true)
							throw (ParseException) jjte000;
					}
				}
				{
					if (true)
						throw (Error) jjte000;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
		} finally {
			trace_return("Variable");
		}
	}

	static final public void IfRelationalOperator() throws ParseException {
		trace_call("IfRelationalOperator");
		try {
			/* @bgen(jjtree) IfRelationalOperator */
			ASTIfRelationalOperator jjtn000 = new ASTIfRelationalOperator(
					JJTIFRELATIONALOPERATOR);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			Token t;
			try {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 33:
					t = jj_consume_token(33);
					break;
				case 37:
					t = jj_consume_token(37);
					break;
				case 38:
					t = jj_consume_token(38);
					break;
				case 39:
					t = jj_consume_token(39);
					break;
				case 40:
					t = jj_consume_token(40);
					break;
				case 41:
					t = jj_consume_token(41);
					break;
				default:
					jj_la1[15] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				jjtree.closeNodeScope(jjtn000, true);
				jjtc000 = false;
				jjtn000.setName(t.image);
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
		} finally {
			trace_return("IfRelationalOperator");
		}
	}

	static final public void IfExpression() throws ParseException {
		trace_call("IfExpression");
		try {
			/* @bgen(jjtree) IfExpression */
			ASTIfExpression jjtn000 = new ASTIfExpression(JJTIFEXPRESSION);
			boolean jjtc000 = true;
			jjtree.openNodeScope(jjtn000);
			try {
				IfSimpleExpression();
				if (jj_2_2(2)) {
					IfRelationalOperator();
					IfExpression();
				} else {
					;
				}
			} catch (Throwable jjte000) {
				if (jjtc000) {
					jjtree.clearNodeScope(jjtn000);
					jjtc000 = false;
				} else {
					jjtree.popNode();
				}
				if (jjte000 instanceof RuntimeException) {
					{
						if (true)
							throw (RuntimeException) jjte000;
					}
				}
				if (jjte000 instanceof ParseException) {
					{
						if (true)
							throw (ParseException) jjte000;
					}
				}
				{
					if (true)
						throw (Error) jjte000;
				}
			} finally {
				if (jjtc000) {
					jjtree.closeNodeScope(jjtn000, true);
				}
			}
		} finally {
			trace_return("IfExpression");
		}
	}

	static final public void IfSimpleExpression() throws ParseException {
		trace_call("IfSimpleExpression");
		try {
			/* @bgen(jjtree) IfSimpleExpression */
			ASTIfSimpleExpression jjtn000 = new ASTIfSimpleExpression(
					JJTIFSIMPLEEXPRESSION);
